fixed padding issue on smaller screens

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,7 +32,7 @@ body {
     margin-right: -10px;
 }
 .aside .main {
-    padding: 40px;
+    padding: 20px;
     color: #6F7B7E;
 }
 .aside .title {
